<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="
           http://maven.apache.org/POM/4.0.0
           http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>ru.yandex.practicum</groupId>
        <artifactId>smart-home-tech</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>collector</artifactId>

    <properties>
        <java.version>21</java.version>
        <kafka.version>3.7.0</kafka.version>
        <avro.version>1.11.3</avro.version>
    </properties>

    <dependencies>

        <!-- ===== Spring Web (REST endpoints) ===== -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- ===== Kafka (НАТИВНЫЙ producer) ===== -->
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-clients</artifactId>
            <version>${kafka.version}</version>
        </dependency>

        <!-- ===== Avro (локальная сериализация) ===== -->
        <dependency>
            <groupId>org.apache.avro</groupId>
            <artifactId>avro</artifactId>
            <version>${avro.version}</version>
        </dependency>

        <!-- ===== Сгенерированные Avro-схемы ===== -->
        <dependency>
            <groupId>ru.yandex.practicum</groupId>
            <artifactId>avro-schemas</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- ===== Общие модели ===== -->
        <dependency>
            <groupId>ru.yandex.practicum</groupId>
            <artifactId>telemetry</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- ===== Lombok ===== -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- ===== Jackson (JSON) ===== -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <!-- ===== Java 21 ===== -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>

            <!-- ===== Spring Boot JAR (с Main-Class) ===== -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <mainClass>
                        ru.yandex.practicum.collector.CollectorApplication
                    </mainClass>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>
